<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/singleItem"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:id="@+id/image"
            android:src="@drawable/rashi"
            android:scaleType="centerCrop"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="5dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_trackName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/track_name"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_collectionName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/collection_name"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="14sp"
                android:textStyle="normal"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_artistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/artist_name"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="14sp"
                android:textStyle="normal"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>